--- a/gallery_new/index.html
+++ b/gallery_new/index.html
@@ -6,28 +6,38 @@
   </head>
   <body>
 
-    <h1>Title of Project 1</h1>
-    <h4>by Your Name</h4>
-    <img src="project1.jpg" width="500" />
-    <p>This is my abstract</p>
+    <h1> Dysfunctional Jewelry Box 1</h1>
+    <h4> by Chloe Neal </h4>
+    <img src="jewelbox.jpg" width="500" />
+    <p> Made out of 12 layers of lasercut 6mm plywood, and four layers of 3D-printed PLA, "Dysfunctional Jewelry Box" serves both an aesthetic and functional purpose. 
+    Designed using Blender and Fusion360, while also making use of the softwares 3DPrinterOS and Adobe Illustrator, this piece took about 
+    a week's worth of time to design and physically create. 
+    The inspiration for it comes from the wavy designs in furniture that have recently been resurfacing + the urge to create something 
+    that had an illusion-like effect to it.
+    </p>
 
     <br/>
     <br/>
     <hr/>
 
-    <h1>Title of Project 2</h1>
-    <h4>by Your Name</h4>
-    <img src="project2.jpg" width="500" />
-    <p>This is my abstract</p>
+    <h1> Press Fit Box 2</h1>
+    <h4>by Chloe Neal</h4>
+    <img src="pressfitbox2.jpg" width="500" />
+    <p> Lasercut with 6mm plywood, these pieces snap together to form a little box to hold other objects. The lid is the only non-press fit part of the box, but it can be 
+    easily be put on, or taken off. The design on the lid is supposed to resemble a starfish and bubbles (designed especially for my mom :)). 
+    </p>
 
     <br/>
     <br/>
     <hr/>
 
-    <h1>Title of Project 3</h1>
-    <h4>by Your Name</h4>
-    <img src="project3.jpg" width="500" />
-    <p>This is my abstract</p>
+    <h1> Color Chaos 3</h1>
+    <h4>by Chloe Neal </h4>
+    <img src="designprinciples_fp.jpg" width="500" />
+    <p> Made with a sketching website, I drew colorful designs layered on top of one another by manipulating color, negative and positive space, and making use of 
+      repeating shapes. Each of the six designs were created separately, and then combined together. One of the rules I worked with on this sketch were that each fragment of the
+      design had to be built on top of the other; once I finished the second fragment of the design, I couldn't go back and change the first. 
+    </p>
 
   </body>
 </html>
