--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
       You can reach her at: chloeneal@ucsb.edu
     </p>
   </body>
-<iframe src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animation-art-design-7JgWTXAAyErk2f51EX">via GIPHY</a></p>
+<iframe src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p>
 
 </html>
