--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </p>
   </body>
   <br>
-<iframe src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p>
+<iframe src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  align = "center"<p>
 
 </html>
