--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body>
+  <body style ="background-color: powderblue;">
     <p>
       Chloe Neal is an incoming fourth year Psychological and Brain Sciences student
       with a minor in Media Arts and Design at UCSB. She takes on an artistic praxis involving
