--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body style ="background-color:#FAC8C8);">
+  <body style ="background-color: rgb(250, 200, 200);">
     <p>
       Chloe Neal is an incoming fourth year Psychological and Brain Sciences student
       with a minor in Media Arts and Design at UCSB. She takes on an artistic praxis involving
