--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body style ="background-color: rgb(250, 200, 200);">
     <p>
-      Chloe Neal is an incoming fourth year Psychological and Brain Sciences student
+      Chloe Neal is an incoming <b>fourth year Psychological and Brain Sciences student</b>
       with a minor in Media Arts and Design at UCSB. She takes on an artistic praxis involving
       the applications of 3D-printing, lasercutting, creative coding + audio engineering. Beyond
       these practices, she has interests related to environmentalism, entrepreneurship and social impact.
