--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <body style ="background-color: rgb(250, 200, 200);">
     <p>
       Chloe Neal is an incoming <b>fourth year Psychological and Brain Sciences student</b>
-      with a minor in Media Arts and Design at UCSB. She takes on an artistic praxis involving
+      with a minor in <b>Media Arts and Design </b> at UCSB. She takes on an artistic praxis involving
       the applications of 3D-printing, lasercutting, creative coding + audio engineering. Beyond
       these practices, she has interests related to environmentalism, entrepreneurship and social impact.
-      You can reach her at: chloeneal@ucsb.edu
+      You can reach her at: <b>chloeneal@ucsb.edu</b>
     </p>
   </body>
   <br>
