--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       with a minor in <b>Media Arts and Design </b> at UCSB. She takes on an artistic praxis involving
       the applications of 3D-printing, lasercutting, creative coding + audio engineering. Beyond
       these practices, she has interests related to environmentalism, entrepreneurship and social impact.
-      You can reach her at: <b>chloeneal@ucsb.edu</b>
+      <u>You can reach her at:</u> <b>chloeneal@ucsb.edu</b>
     </p>
   </body>
   <br>
