--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<style>
+p {text-align: center;}
+  
+</style>
   <body style ="background-color: rgb(250, 200, 200);">
     <p>
       Chloe Neal is an incoming <b>fourth year Psychological and Brain Sciences student</b>
