--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ p {text-align: center;}
 </style>
   <body style ="background-color: rgb(250, 200, 200);">
     <p>
-      Chloe Neal is an incoming <b>fourth year Psychological and Brain Sciences student</b>
-      with a minor in <b>Media Arts and Design </b> at UCSB. She takes on an artistic praxis involving
-      the applications of 3D-printing, lasercutting, creative coding + audio engineering. Beyond
-      these practices, she has interests related to environmentalism, entrepreneurship and social impact.
-      <u>You can reach her at:</u> <b>chloeneal@ucsb.edu</b>
+      Chloe Neal is an incoming <b>fourth year Psychological and Brain Sciences student</b></p>
+      <p>with a minor in <b>Media Arts and Design </b> at UCSB.</p> <p>She takes on an artistic praxis involving
+      the applications of 3D-printing,</p> <p>lasercutting, creative coding + audio engineering.</p> <p>Beyond
+      these practices, she has interests related to:</p> <p>environmentalism, entrepreneurship and social impact.</p>
+      <p></p><u>You can reach her at:</u> <b>chloeneal@ucsb.edu</b></p>
     </p>
   </body>
   <br>
