--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p {text-align: center;}
       <p>with a minor in <b>Media Arts and Design </b> at UCSB.</p> <p>She takes on an artistic praxis involving
       the applications of 3D-printing,</p> <p>lasercutting, creative coding + audio engineering.</p> <p>Beyond
       these practices, she has interests related to:</p> <p>environmentalism, entrepreneurship and social impact.</p>
-      <p></p><u>You can reach her at:</u> <b>chloeneal@ucsb.edu</b></p>
+      <p><u>You can reach her at:</u> <b>chloeneal@ucsb.edu</b></p>
     </p>
   </body>
   <br>
