--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ p {text-align: center;}
     <p>
       Chloe Neal is an incoming <b>fourth year Psychological and Brain Sciences student</b></p>
       <p>with a minor in <b>Media Arts and Design </b> at UCSB.</p> <p>She takes on an artistic praxis involving
-      the applications of 3D-printing,</p> <p>lasercutting, creative coding + audio engineering.</p> <p>Beyond
+      the applications of:</p> <p>{3D-printing, lasercutting, creative coding + audio engineering}.</p> <p>Beyond
       these practices, she has interests related to:</p> <p>{environmentalism, entrepreneurship and social impact}.</p>
       <p><u>You can reach her at:</u> <b>chloeneal@ucsb.edu</b></p>
     </p>
