--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <style>
 p {text-align: center;}
+iframe src {  
   
 </style>
   <body style ="background-color: rgb(250, 200, 200);">
@@ -13,7 +14,7 @@ p {text-align: center;}
     </p>
   </body>
   <br>
-<iframe src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed"
+<iframe align = "middle" src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed"
   align="center">
 
 </html>
