--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ iframe src {
   <br>
 <iframe align = "middle" src="https://giphy.com/embed/7JgWTXAAyErk2f51EX" width="480" height="480" style="" frameBorder="0" class="giphy-embed"
   align="center">
+</iframe>
 
 </html>
