--- a/gallery_new/index.html
+++ b/gallery_new/index.html
@@ -4,7 +4,7 @@
     <title>Gallery Program</title>
     <meta charset="utf-8" />
   </head>
-  <body>
+  <body style ="background-color: rgb(250, 200, 200);">
 
     <h1> Dysfunctional Jewelry Box </h1>
     <h4> by Chloe Neal </h4>
