--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@ iframe src {
   align="center">
 </iframe>
 
+  <a href="https://chloeneal.github.io/gallery_new/">Link to Gallery of Projects</a>
+
 </html>
