--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ iframe src {
 </iframe>
 
   <br>
-<a href="https://chloeneal.github.io/gallery_new/" style="text-align:center">Link to Gallery of Projects</a>
+<a href="https://chloeneal.github.io/gallery_new/"><span style="text-align:center">Link to Gallery of Projects</span></a>
 
 </html>
